Ooops, forgot to change one thing in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 						<archive>
 							<addMavenDescriptor>false</addMavenDescriptor>
 						</archive>
-						<finalName>ModTRSBot</finalName>
+						<finalName>LogShit</finalName>
 					</configuration>
 				</plugin>
 				<plugin>
